@@ -231,6 +231,89 @@
          },
 
 
+        {'endpoint': '/ca-certificates.json',
+         'about': """list ca-certificates""",
+         'POST': True,
+         'GET': True,
+         'args': "",
+         'example': "curl {ADMIN_PREFIX}/ca-certificates.json",
+         },
+        {'endpoint': '/ca-certificates/{PAGE}.json',
+         'about': """list ca-certificates, paginated""",
+         'POST': True,
+         'GET': True,
+         'args': "",
+         'example': "curl {ADMIN_PREFIX}/ca-certificates/1.json",
+         },
+        {'endpoint': '/ca-certificate/{ID}.json',
+         'about': """parse certificate""",
+         'POST': True,
+         'GET': True,
+         'args': "",
+         'example': "curl {ADMIN_PREFIX}/ca-certificate/1.json",
+         },
+        {'endpoint': '/ca-certificate/{ID}/parse.json',
+         'about': """parse certificate""",
+         'POST': True,
+         'GET': True,
+         'args': "",
+         'example': "curl {ADMIN_PREFIX}/ca-certificate/1/parse.json",
+         },
+        {'endpoint': '/ca-certificates/{ID}/chain.pem',
+         'about': """cert as pem""",
+         'POST': True,
+         'GET': True,
+         'args': "",
+         'example': "curl {ADMIN_PREFIX}/ca-certificate/1/chain.pem",
+         },
+        {'endpoint': '/ca-certificates/{ID}/chain.pem.txt',
+         'about': """cert as pem.txt""",
+         'POST': True,
+         'GET': True,
+         'args': "",
+         'example': "curl {ADMIN_PREFIX}/ca-certificate/1/chain.pem.txt",
+         },
+        {'endpoint': '/ca-certificates/{ID}/chain.cer',
+         'about': """cert as cer""",
+         'POST': True,
+         'GET': True,
+         'args': "",
+         'example': "curl {ADMIN_PREFIX}/ca-certificate/1/chain.cer",
+         },
+        {'endpoint': '/ca-certificates/{ID}/chain.crt',
+         'about': """cert as crt""",
+         'POST': True,
+         'GET': True,
+         'args': "",
+         'example': "curl {ADMIN_PREFIX}/ca-certificate/1/chain.crt",
+         },
+        {'endpoint': '/ca-certificates/{ID}/chain.der',
+         'about': """cert as der""",
+         'POST': True,
+         'GET': True,
+         'args': "",
+         'example': "curl {ADMIN_PREFIX}/ca-certificate/1/chain.der",
+         },
+        {'endpoint': '/ca-certificate/upload.json',
+         'about': """Upload an authority certificate""",
+         'POST': True,
+         'GET': None,
+         'args': """This route is self-documenting on GET requests""",
+         'examples': ["curl {ADMIN_PREFIX}/ca-certificate/upload.json",
+                      "curl --form 'chain_file=@chain1.pem' --form {ADMIN_PREFIX}/ca-certificate/upload.json",
+                      ]
+         },
+        {'endpoint': '/ca-certificate/upload-bundle.json',
+         'about': """Upload an authority certificate bundle""",
+         'POST': True,
+         'GET': None,
+         'args': """This route is self-documenting on GET requests""",
+         'examples': ["curl {ADMIN_PREFIX}/ca-certificate/upload-bundle.json",
+                      "curl --form 'isrgrootx1_file=@isrgrootx1.pem' --form 'le_x1_cross_signed_file=@lets-encrypt-x1-cross-signed.pem' --form 'le_x2_cross_signed_file=@lets-encrypt-x2-cross-signed.pem' --form 'le_x3_cross_signed_file=@lets-encrypt-x3-cross-signed.pem' --form 'le_x4_cross_signed_file=@lets-encrypt-x4-cross-signed.pem' --form 'le_x1_auth_file=@letsencryptauthorityx1' --form 'le_x2_auth_file=@letsencryptauthorityx2' {ADMIN_PREFIX}/ca-certificate/upload-bundle.json",
+                      ]
+         },
+
+
         {'endpoint': '/domains.json',
          'about': """list domains""",
          'POST': True,
@@ -310,30 +393,9 @@
          'GET': None,
          'args': """This route is self-documenting on GET requests""",
          },
-        {'endpoint': '/ca-certificates.json',
-         'about': """list ca-certificates""",
-         'POST': True,
-         'GET': True,
-         'args': "",
-         },
-        {'endpoint': '/ca-certificates/{PAGE}.json',
-         'about': """list ca-certificates, paginated""",
-         'POST': True,
-         'GET': True,
-         'args': "",
-         },
-        {'endpoint': '/ca-certificate/upload.json',
-         'about': """Upload an authority certificate""",
-         'POST': True,
-         'GET': None,
-         'args': """This route is self-documenting on GET requests""",
-         },
-        {'endpoint': '/ca-certificate/upload-bundle.json',
-         'about': """Upload an authority certificate bundle""",
-         'POST': True,
-         'GET': None,
-         'args': """This route is self-documenting on GET requests""",
-         },
+
+
+
         {'endpoint': '/certificates.json',
          'about': """list certificates""",
          'POST': True,
