@@ -75,6 +75,7 @@
 * make self-documenting: admin:account_key:focus:mark|json ; fix formerror too
 * make self-documenting: admin:domain:focus:mark|json ; fix formerror too
 * tests - acme-providers
+* tests - acme-events
 
 
 
